# lttng-mcount

./: .gitignore  README.md  configure.ac
src/: Makefile.am  dynamic.c  dynamic.h  func-tp.h  mcount.c
src/arch/x86_64/: arch-dynamic.c
src/util/: compiler.h
tests/: Makefile.am  looptest.c
